feat: portable paths and VM provisioning script
Replace hardcoded /home/lanpirot in AppConfig with user.home so the
pipeline runs under any username. Add scripts/setup_vm.sh to bootstrap
a fresh Ubuntu 24.04 VM with all required JDKs, Maven, mvnd, Python
venv, and directory structure.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>